--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,19 @@
 </head>
 
 <body>
-    <img class="logo" src="logo.png" alt="">
+    <img class="logo" src="/images/logo.png" alt="">
 
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres</span>
         <input id="slider" class="slider" type="range" min="5" max="25" value="15">
 
-        <button id="button" class="button-cta">Gerar senha</button>
+        <button id="button" class="button-cta" onclick="generatePassword()">Gerar senha</button>
 
     </main>
 
-    <div id="container-password" class="container-password hide">
+    <div id="container-password" onclick="copyPassword()" class="container-password hide">
         <span class="title">Sua senha gerada foi:</span>
-        <span id="password" class="password">121212</span>
+        <span id="password" class="password"></span>
         <span class="tooltip">Clique na senha para copiar.</span>
     </div>
 
