--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img class="logo" src="/images/logo.png" alt="">
+    <img class="logo" src="logo.png" alt="">
 
     <main class="container-input">
         <span>Tamanho <span id="valor"></span> caracteres</span>
